--- a/intro_to_scikit_learn.ipynb
+++ b/intro_to_scikit_learn.ipynb
@@ -6249,7 +6249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "id": "9634dc26-4c4c-4b77-9de5-7d4cfb9a1fff",
    "metadata": {},
    "outputs": [
@@ -6259,7 +6259,7 @@
        "0.9304956896551724"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6290,7 +6290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 86,
    "id": "61224082-a26f-495d-a287-e2c2be6eae19",
    "metadata": {},
    "outputs": [
@@ -6707,7 +6707,7 @@
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6733,7 +6733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 87,
    "id": "a513ecb3-5f8c-4e25-bab4-0e2a10b0b45a",
    "metadata": {},
    "outputs": [
@@ -6745,7 +6745,7 @@
        "       1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6757,7 +6757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 88,
    "id": "58347050-1e9c-4763-b2c9-1f14ae9cdaf1",
    "metadata": {},
    "outputs": [
@@ -6768,7 +6768,7 @@
        "       [ 4, 28]], dtype=int64)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6779,7 +6779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "id": "50eba9df-de74-4251-be6a-e1626b09189c",
    "metadata": {},
    "outputs": [
@@ -6835,7 +6835,7 @@
        "1                 4  28"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6851,7 +6851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 90,
    "id": "21110143-c334-423b-9972-9f8dd8d6e087",
    "metadata": {},
    "outputs": [
@@ -6861,7 +6861,7 @@
        "(61, 61)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6880,7 +6880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 91,
    "id": "29926193-e767-4d87-b9d2-7f0a31c3774e",
    "metadata": {},
    "outputs": [
@@ -6894,8 +6894,24 @@
       "Collecting package metadata (repodata.json): ...working... done\n",
       "Solving environment: ...working... done\n",
       "\n",
-      "# All requested packages already installed.\n",
-      "\n"
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: C:\\PAUL\\GITHUBREPOS\\ml-fundamentals\\env\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - seaborn\n",
+      "\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "  seaborn            pkgs/main/win-64::seaborn-0.13.2-py312haa95532_0 \n",
+      "\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages: ...working... done\n",
+      "Preparing transaction: ...working... done\n",
+      "Verifying transaction: ...working... done\n",
+      "Executing transaction: ...working... done\n"
      ]
     }
    ],
@@ -6916,7 +6932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 92,
    "id": "9d71dbe7-9539-4265-8142-7a126bfcf944",
    "metadata": {},
    "outputs": [
@@ -6960,7 +6976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 93,
    "id": "c38b0af0-d296-4d66-a93f-2f87e71c17b5",
    "metadata": {},
    "outputs": [
@@ -6970,7 +6986,7 @@
        "'1.4.2'"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6982,7 +6998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 94,
    "id": "8bb6bcdf-523f-4257-b2ce-1c6b033af67f",
    "metadata": {},
    "outputs": [
@@ -7399,7 +7415,7 @@
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7423,7 +7439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 95,
    "id": "825190d9-5c51-4489-a080-d9f0305f1669",
    "metadata": {},
    "outputs": [
@@ -7446,7 +7462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 96,
    "id": "ecdfb626-e175-4a33-9bd2-f90920dd461e",
    "metadata": {},
    "outputs": [
@@ -7477,7 +7493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 97,
    "id": "1ea388ab-f77f-40f2-99fe-e4fca0944e9f",
    "metadata": {},
    "outputs": [
@@ -7517,7 +7533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "id": "427b7949-41ed-4757-abcc-ce088f070e91",
    "metadata": {},
    "outputs": [
@@ -7934,7 +7950,7 @@
        "RandomForestRegressor()"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7959,7 +7975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "id": "adfdb961-f880-458b-ae13-f1a12cdc5a70",
    "metadata": {},
    "outputs": [
@@ -7969,7 +7985,7 @@
        "0.8065734772187598"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7980,7 +7996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 100,
    "id": "7a9db6bd-ab90-47ef-b510-1acad7220189",
    "metadata": {},
    "outputs": [
@@ -8001,7 +8017,7 @@
        "Name: target, Length: 4128, dtype: float64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8012,7 +8028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 101,
    "id": "86a5edc7-916b-49e5-9ba8-0119c69800c2",
    "metadata": {},
    "outputs": [
@@ -8022,7 +8038,7 @@
        "2.0550030959302323"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8033,7 +8049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 102,
    "id": "092b9522-d73e-4f16-8aab-7d6b2224a615",
    "metadata": {},
    "outputs": [],
@@ -8045,7 +8061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 103,
    "id": "5a7a7fab-c4a3-4ac7-800a-09aa3e40b470",
    "metadata": {},
    "outputs": [
@@ -8056,7 +8072,7 @@
        "       2.0550031])"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8067,7 +8083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 104,
    "id": "f5bf9a34-7f3d-4a68-9c2d-16b54b485a57",
    "metadata": {},
    "outputs": [
@@ -8077,7 +8093,7 @@
        "0.0"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8098,7 +8114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 105,
    "id": "62a7f01e-999a-4129-bfe7-456cdb08b103",
    "metadata": {},
    "outputs": [
@@ -8108,7 +8124,7 @@
        "0.32659871732073664"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8146,7 +8162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 106,
    "id": "5d246ee1-e060-477e-be35-080ec9072029",
    "metadata": {},
    "outputs": [
@@ -8156,7 +8172,7 @@
        "(0.32659871732073664, 0.32659871732073664)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8184,7 +8200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 107,
    "id": "dddde895-4a93-403f-afd2-e62201ca3385",
    "metadata": {},
    "outputs": [
@@ -8194,7 +8210,7 @@
        "0.2534678520824551"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8233,8 +8249,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "id": "abf47096-1b8d-4478-bbc9-1cd7b55c130f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8524590163934426"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## https://scikit-learn.org/stable/modules/model_evaluation.html\n",
+    "from sklearn.model_selection import cross_val_score, train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "X = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "clf = RandomForestClassifier(n_estimators=100)\n",
+    "clf.fit(X_train, y_train)\n",
+    "clf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "d6593998-7fa9-43e1-8344-e222c5c9cb90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.81967213, 0.90163934, 0.83606557, 0.78333333, 0.78333333])"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "\n",
+    "cv_acc = cross_val_score(clf, X, y, cv=5, scoring=None) # if scoring=None, estimator's default scoring evaluation metric is used (accuracy for classification models)\n",
+    "cv_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "757f082d-1478-4fa4-b9c8-ec95a1c38e5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validated accuracy is: 82.48%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cross-validated accuracy\n",
+    "print(f\"Cross-validated accuracy is: {np.mean(cv_acc) * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "b3973f9f-0cef-4bcf-a6cb-1604475f5fcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.81967213, 0.90163934, 0.83606557, 0.78333333, 0.78333333])"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "cv_acc = cross_val_score(clf, X, y, cv=5, scoring=\"accuracy\") # if scoring=None, estimator's default scoring evaluation metric is used (accuracy for classification models)\n",
+    "cv_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "01397a23-6177-4a55-9300-dd29459238fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validated accuracy is: 82.48%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cross-validated accuracy\n",
+    "print(f\"Cross-validated accuracy is: {np.mean(cv_acc) * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "92e845e0-00f9-4542-ada6-b2a9fb7d9558",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.82352941, 0.93548387, 0.84848485, 0.79411765, 0.76315789])"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using Precision scoring\n",
+    "np.random.seed(42)\n",
+    "cv_precision = cross_val_score(clf, X, y, cv=5, scoring=\"precision\")\n",
+    "cv_precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "bbf57937-41bb-43a6-b67e-3bc918cbecb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validated precision scoring: 83.30%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Cross-validated precision scoring: {np.mean(cv_precision)*100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "4251ae34-96a3-4251-a324-9845acbe9277",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.84848485, 0.87878788, 0.84848485, 0.81818182, 0.87878788])"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using Recall scoring\n",
+    "np.random.seed(42)\n",
+    "cv_recall = cross_val_score(clf, X, y, cv=5, scoring=\"recall\")\n",
+    "cv_recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "12b3e97d-4e27-43b1-90e2-f38d674a3348",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validate recall scoring: 85.45%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Cross-validate recall scoring: {np.mean(cv_recall)*100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d4b9ab9-8ddb-467a-91c2-d803def8516a",
    "metadata": {},
    "outputs": [],
    "source": []
