--- a/intro_to_scikit_learn.ipynb
+++ b/intro_to_scikit_learn.ipynb
@@ -8244,7 +8244,9 @@
    "id": "25bc7d76-4ba8-4499-af66-c7b0617c8df6",
    "metadata": {},
    "source": [
-    "## Using the `Scoring parameter`"
+    "## Using the `Scoring parameter`\n",
+    "[ https://scikit-learn.org/stable/modules/model_evaluation.html ]\n",
+    "[https://scikit-learn.org/stable/modules/model_evaluation.html#common-cases-predefined-values]"
    ]
   },
   {
@@ -8265,7 +8267,7 @@
     }
    ],
    "source": [
-    "## https://scikit-learn.org/stable/modules/model_evaluation.html\n",
+    "\n",
     "from sklearn.model_selection import cross_val_score, train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import numpy as np\n",
@@ -8453,9 +8455,175 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e80bcc07-bdfa-4509-a66c-a095dcd9f1f6",
+   "metadata": {},
+   "source": [
+    "# Using cross validation with Regression models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "58e97de0-1969-48cb-8881-b732567381dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8065734772187598"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "X = housing_df.drop(\"target\", axis=1)\n",
+    "y = housing_df[\"target\"]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "model = RandomForestRegressor(n_estimators=100)\n",
+    "model.fit(X_train, y_train)\n",
+    "model.score(X_test, y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "1b4c1db5-59ec-4c06-9885-491f3181d917",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.6169727 , 0.72399844, 0.61880971])"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using cross validation\n",
+    "cv_r2 = cross_val_score(model, X, y, cv=3, scoring=None) # default is r2 aka coefficianet of determination\n",
+    "cv_r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "2dc8cfd9-87e6-43d5-93d2-d4b88cc1cab3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validated using r2 aka coefficient of determination: 65.33%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Cross-validated using r2 aka coefficient of determination: {np.mean(cv_r2)*100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "c33bb5f8-c7b4-4bda-a5cb-873d4371ff64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.51535732, -0.4237943 , -0.5048596 ])"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using mean squared error\n",
+    "cv_mae = cross_val_score(model, X, y, cv=3, scoring=\"neg_mean_absolute_error\")\n",
+    "cv_mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "f55ae1bd-db8b-4890-b173-37cfa54e0209",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validated using mean absolute error: -48.13%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Cross-validated using mean absolute error: {np.mean(cv_mae)*100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "f54fa79e-1f42-4fa4-90a8-332aee5d36bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.51851008, -0.34604926, -0.37498705, -0.43913652, -0.46509263])"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using mean squared error , closer to zero the better\n",
+    "cv_mse = cross_val_score(model, X, y, scoring=\"neg_mean_squared_error\")\n",
+    "cv_mse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "018683b5-a17b-491e-9517-355648404494",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validated using mean squared error: -42.88%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Cross-validated using mean squared error: {np.mean(cv_mse)*100:.2f}%\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d4b9ab9-8ddb-467a-91c2-d803def8516a",
+   "id": "e4637e61-83b4-46a0-be8e-ddfdda7880f1",
    "metadata": {},
    "outputs": [],
    "source": []
