Finish Using different evaluation metrics as Scikit-learn functions

--- a/intro_to_scikit_learn.ipynb
+++ b/intro_to_scikit_learn.ipynb
@@ -8245,8 +8245,8 @@
    "metadata": {},
    "source": [
     "## Using the `Scoring parameter`\n",
-    "[ https://scikit-learn.org/stable/modules/model_evaluation.html ]\n",
-    "[https://scikit-learn.org/stable/modules/model_evaluation.html#common-cases-predefined-values]"
+    "1. [ https://scikit-learn.org/stable/modules/model_evaluation.html ]\n",
+    "2. [ https://scikit-learn.org/stable/modules/model_evaluation.html#common-cases-predefined-values ]"
    ]
   },
   {
@@ -8267,7 +8267,7 @@
     }
    ],
    "source": [
-    "\n",
+    "[ https://scikit-learn.org/stable/modules/model_evaluation.html ]\n",
     "from sklearn.model_selection import cross_val_score, train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import numpy as np\n",
@@ -8621,9 +8621,246 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4bd8706-5ce8-4911-b7fd-ac4e449420c4",
+   "metadata": {},
+   "source": [
+    "## Using different evaluation metrics as Scikit-learn functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac4c6779-9905-4106-811b-1891bb08fbb7",
+   "metadata": {},
+   "source": [
+    "## Classification models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "44ec29ee-55a1-425e-a089-401bd2428d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "X = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "clf = RandomForestClassifier(n_estimators=100)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "y_preds = clf.predict(X_test)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "203d1da3-c8f8-49d8-a8c2-e978d54e1253",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8524590163934426"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Accuracy_score\n",
+    "acc_score = accuracy_score(y_test, y_preds)\n",
+    "acc_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "a67a8c54-6d41-4ba5-bc96-6de39fd91bae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8484848484848485"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Precision score\n",
+    "prec_score = precision_score(y_test, y_preds)\n",
+    "prec_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "599ad342-3495-4a99-80d0-7b2a1e1e39c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.875"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Recall score\n",
+    "rec_score = recall_score(y_test, y_preds)\n",
+    "rec_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "bee7f752-553a-471f-a86d-c7ad07a00bc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8615384615384616"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# f1 score\n",
+    "f_1_score = f1_score(y_test, y_preds)\n",
+    "f_1_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23b204a6-041e-4ff7-a9c2-34aeabe9b5be",
+   "metadata": {},
+   "source": [
+    "## Regression Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "506ed9d8-f666-49af-85d5-d97a3c6a8b8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "X = housing_df.drop(\"target\", axis=1)\n",
+    "y = housing_df[\"target\"]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "model = RandomForestRegressor(n_estimators=100)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_preds = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "69964337-d323-4f3a-afb5-55952d937fe3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8065734772187598"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# r2_score\n",
+    "r_2_score = r2_score(y_test, y_preds)\n",
+    "r_2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "f3c0248d-7e98-4434-943b-faabe8ebd749",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32659871732073664"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mean absolute error\n",
+    "mae = mean_absolute_error(y_test, y_preds)\n",
+    "mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "bdf1b01e-7a52-4413-9c82-ca39007219fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2534678520824551"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mean squared error\n",
+    "mse = mean_squared_error(y_test, y_preds)\n",
+    "mse"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4637e61-83b4-46a0-be8e-ddfdda7880f1",
+   "id": "187dbe37-716b-4be8-bfc7-1f93e19854af",
    "metadata": {},
    "outputs": [],
    "source": []
